<resources>
    <string name="app_name">GesparkMove</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="utilizador">Utilizador</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="gespark_move">GesPark Move</string>
    <string name="recuperar">Recuperar</string>
    <string name="registar">Registar</string>
    <string name="pagamentos">Pagamentos</string>
    <string name="estacionamentos">Estacionamentos</string>
    <string name="inactivos">Inactivos</string>
    <string name="adicionar">Adicionar</string>
    <string name="veiculos">Veículos</string>
    <string name="consultas">Consultas</string>
    <string name="consultar">Consultar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matricula">Matrícula</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="cor">Cor:</string>
    <string name="ativo">Ativo</string>
    <string name="apagar_veiculo">Apagar Veículo</string>
    <string name="gpm_logo">GPM Logo</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="morada">Morada</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="contato">Contato</string>
    <string name="n_mero_fiscal">Número Fiscal</string>
    <string name="mail">Mail</string>
    <string name="voltar">Voltar</string>
</resources>
