<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="Dashboard"
        android:icon="@drawable/ic_menuitem_dashboard"
        android:id="@+id/menuItemDashboard"/>
    <item
        android:title="@string/veiculos"
        android:icon="@drawable/ic_menuitem_car">
        <menu>
            <item
                android:id="@+id/menuItemAdicionar"
                android:icon="@drawable/ic_menuitem_add"
                android:title="@string/adicionar"/>
            <item
                android:id="@+id/menuItemConsultar"
                android:icon="@drawable/ic_menuteim_edit"
                android:title="@string/consultar"/>
        </menu>
    </item>
    <item
        android:title="@string/consultas"
        android:icon="@drawable/ic_menuitem_listcar">
        <menu>
            <item
                android:id="@+id/menuItemEstacionamentos"
                android:icon="@drawable/ic_menuitem_parked"
                android:title="@string/estacionamentos"/>
            <item
                android:id="@+id/menuItemPagamentos"
                android:icon="@drawable/ic_menuitem_payment"
                android:title="@string/pagamentos"/>
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item
                android:title="Logout"
                android:icon="@drawable/ic_menuitem_logout"
                android:id="@+id/menuItemLogout"/>
        </menu>
    </item>
</menu>
