<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewMainLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gespark_move"
            android:layout_marginTop="-50dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/gpmlogo" />

        <EditText
            android:id="@+id/editTextMainUtilizador"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/edittext_custom"
            android:ems="10"
            android:hint="@string/utilizador"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextMainPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMainLogo" />

        <EditText
            android:id="@+id/editTextMainPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/edittext_custom"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonMainLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_custom"
            android:enabled="false"
            android:text="@string/login" />

        <Button
            android:id="@+id/buttonMainRegistar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_custom"
            android:text="@string/registar" />

        <Button
            android:id="@+id/buttonMainRecuperar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:text="@string/recuperar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>