<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentCar"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewCarAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_default_car_avatar"
            app:civ_border_color="#3C8DBC"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/textViewCarLicensePlate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:text="@string/matricula"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/textViewCarBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/marca"
            android:textColor="#000000"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/textViewCarModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/modelo"
            android:textColor="#000000"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/textViewCarColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cor"
            android:textColor="#000000"
            android:textSize="22sp" />
        <Switch
            android:id="@+id/switchCarActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ativo"
            android:textSize="22sp"
            android:layout_marginBottom="10dp"/>
        <Spinner
            android:id="@+id/spinnerCarPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/spinner_custom"/>
        <Button
            android:id="@+id/buttonCarSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Gravar"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_custom"/>
        <Button
            android:id="@+id/buttonCarDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/apagar_veiculo"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_custom"/>
        <TextView
            android:id="@+id/textViewCarWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Não é possível ativar / destivar, alterar plano de pagamento ou apagar o veículo pois o mesmo encontra-se em estacionamento."
            android:textAlignment="center"
            android:textColor="#990000"
            android:textSize="12sp"
            android:visibility="invisible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>